{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 153,
  "lineage": "78fd491c-c520-fee1-8a44-c7e6be0ba455",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_az0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:565143587686:subnet/subnet-39014743",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.31.16.0/20",
            "id": "subnet-39014743",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "565143587686",
            "vpc_id": "vpc-5f774737"
          },
          "dependencies": [
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nexus_template",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0194c3e07668a7e36",
            "arn": "arn:aws:ec2:eu-west-2:565143587686:instance/i-0659af2ebbe371a42",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0659af2ebbe371a42",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "atimonin",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01984dc9b8f58d81e",
            "private_dns": "ip-172-31-20-52.eu-west-2.compute.internal",
            "private_ip": "172.31.20.52",
            "public_dns": "ec2-35-178-111-98.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.178.111.98",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bcf88eea7d0cc92e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "nexus_template_allow_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-39014743",
            "tags": {
              "Name": "nexus_template_instance",
              "student": "atimonin"
            },
            "tags_all": {
              "Name": "nexus_template_instance",
              "student": "atimonin"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04d03f33f17c327fe"
            ]
          },
          "dependencies": [
            "aws_default_subnet.default_subnet_az0",
            "aws_efs_file_system.nexus_store",
            "aws_efs_mount_target.nexus_mount_target",
            "aws_security_group.nexus_efs_sg",
            "aws_security_group.nexus_template_sg",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nexus_efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:565143587686:security-group/sg-04c5e66401e8b3d9e",
            "description": "Allow inbound from nexus_template and outbound any",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04c5e66401e8b3d9e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04d03f33f17c327fe"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "EFS_sg",
            "name_prefix": "",
            "owner_id": "565143587686",
            "revoke_rules_on_delete": false,
            "tags": {
              "student": "atimonin"
            },
            "tags_all": {
              "student": "atimonin"
            },
            "timeouts": null,
            "vpc_id": "vpc-5f774737"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nexus_template_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nexus_template_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:565143587686:security-group/sg-04d03f33f17c327fe",
            "description": "Allow ssh to nexus_template and outbound to everywhere (for downloads)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04d03f33f17c327fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "nexus_template_allow_ssh",
            "name_prefix": "",
            "owner_id": "565143587686",
            "revoke_rules_on_delete": false,
            "tags": {
              "student": "atimonin"
            },
            "tags_all": {
              "student": "atimonin"
            },
            "timeouts": null,
            "vpc_id": "vpc-5f774737"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}